--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
 # Django Settings
-ALLOWED_HOSTS="10.8.8.2,10.0.2.2,127.0.0.1,localhost"
-CSRF_TRUSTED_ORIGINS="http://10.0.2.2"
-CORS_ALLOWED_ORIGINS="http://localhost:3000,http://127.0.0.1:3000"
+ALLOWED_HOSTS="10.8.8.2,10.0.2.2,127.0.0.1,localhost,monitoring-backend.inethilocal.net"
+CSRF_TRUSTED_ORIGINS="http://10.0.2.2,https://monitoring-backend.inethilocal.net"
+CORS_ALLOWED_ORIGINS="http://localhost:3000,http://127.0.0.1:3000,https://monitoring-backend.inethilocal.net"
 DEBUG=True
 SECRET_KEY="secret-key"
 
 CLOUD_API_URL="http://localhost:8000/api/v1/"
 CELERY_BROKER_URL="redis://redis:6379/0"
+
+# Traefik Configuration
+TRAEFIK_BACKEND_HOST="monitoring-backend.inethilocal.net"
+TRAEFIK_ENTRYPOINTS="websecure"
+TRAEFIK_NETWORK_BRIDGE="inethi-bridge-traefik"
 
 # Backend DB Config
 DB_HOST="db"
